[package]
name = "throttle2"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple threadsafe throttle (rate limiter) that maintains fixed time intervals between ticks"
repository = "https://github.com/Holy-Raccoon/throttle2.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
